fix achievement spacing

--- a/css/main.less
+++ b/css/main.less
@@ -317,7 +317,7 @@ header{
 			
 
 			margin: @basePadding/2;
-			padding: @basePadding;
+			padding: @basePadding @lessPadding;
 			padding-bottom: 0;
 
 			text-align:center;
